--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! I love this course! </h1>
+<h1>Hello Coursera! I love this course!</h1>
+<h2>It's a great course!</h2>
 </body>
 </html>					
