--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
 	<title>Hello Coursera</title>
 </head>
 <body>
 <h1>Hello Coursera! I love this course!</h1>
 <h2>It's a great course!</h2>
+<p>I like my </p>
 </body>
 </html>					
