--- a/site/index.html
+++ b/site/index.html
@@ -5,8 +5,64 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! I love this course!</h1>
-<h2>It's a great course!</h2>
-<p>I like my </p>
+<h1 id="top">Hello Coursera!</h1>
+<header>
+<nav>
+	<ul>
+	<li><a href="#section1">Section 1</a></li>
+	<li><a href="#section2">Section 2</a></li>
+	<li><a href="#section3">Section 3</a></li>
+    </ul>
+</nav>
+</header>
+<section id="section1">
+	<h2>Section 1</h2>
+	<p>This section will discuss about Fashion.ith a consonant sound (even if spelled with a vowel, as in a European).
+
+She had a house so large that an elephant would get lost without a map.
+Before some words beginning with a pronounced (not silent) h in an unstressed first syllable, such as hallucination, hilarious, historic(al), horrendous, and horrific, some (especially older) British writers prefer to use an over a (an historical event, etc.).[7] An is also preferred before hotel by some writers of British English (probably reflecting the relatively recent adoption of the word from French, in which the h is not pronounced).[8] The use of "an" before words beginning with an unstressed "h" is more common generally in British English than in American.[8] American writers normally use a in all these cases, although there are occasional uses of an historic(al) in American English.[9] According to the New Oxford Dictionary of English, such use is increasingly rare in British English too.[7] Unlike British English, American English typically uses an before herb, since the h in this word is silent for most Americans. The correct usage in respect of the term "hereditary peer" was the subject of an amendment debated in the UK Parliament.[10]
+
+Using a before a word beginning with a vowel sound in unstressed syllables - such as I left a orange on the working surface. - is not uncommon, but is universally considered non-standard.
+
+The word some is used as a functional plural of a/an.[citation needed] "An apple" never means more than one apple. "Give me some apples" indicates more than one is desired but without specifying a quantity. This finds comparison in Spanish, where the singular indefinite article "un/una" ("one") is completely indistinguishable from the unit number, except where it has a plural form ("unos/unas"): Dame una manzana" ("Give me an apple") > "Dame unas manzanas" ("Give me some apples"). However, some also serves as a quantifier rather than as a plural article, as in "There are some apples there, but not many."
+
+Some also serves as a singular indefinite article, as in "There is some person on the porch".</p>
+</section>
+<section id="section2">
+	<h2>Section 2</h2>
+	<p>This section will discuss about Lifestyle.ith a consonant sound (even if spelled with a vowel, as in a European).
+
+She had a house so large that an elephant would get lost without a map.
+Before some words beginning with a pronounced (not silent) h in an unstressed first syllable, such as hallucination, hilarious, historic(al), horrendous, and horrific, some (especially older) British writers prefer to use an over a (an historical event, etc.).[7] An is also preferred before hotel by some writers of British English (probably reflecting the relatively recent adoption of the word from French, in which the h is not pronounced).[8] The use of "an" before words beginning with an unstressed "h" is more common generally in British English than in American.[8] American writers normally use a in all these cases, although there are occasional uses of an historic(al) in American English.[9] According to the New Oxford Dictionary of English, such use is increasingly rare in British English too.[7] Unlike British English, American English typically uses an before herb, since the h in this word is silent for most Americans. The correct usage in respect of the term "hereditary peer" was the subject of an amendment debated in the UK Parliament.[10]
+
+Using a before a word beginning with a vowel sound in unstressed syllables - such as I left a orange on the working surface. - is not uncommon, but is universally considered non-standard.
+
+The word some is used as a functional plural of a/an.[citation needed] "An apple" never means more than one apple. "Give me some apples" indicates more than one is desired but without specifying a quantity. This finds comparison in Spanish, where the singular indefinite article "un/una" ("one") is completely indistinguishable from the unit number, except where it has a plural form ("unos/unas"): Dame una manzana" ("Give me an apple") > "Dame unas manzanas" ("Give me some apples"). However, some also serves as a quantifier rather than as a plural article, as in "There are some apples there, but not many."
+
+Some also serves as a singular indefinite article, as in "There is some person on the porch".
+<img src="https://static.pexels.com/photos/39583/tulip-blossom-bloom-macro-39583.jpeg" width="400" height="400">
+
+</p>
+<div><img src="https://static.pexels.com/photos/39583/tulip-blossom-bloom-macro-39583.jpeg" width="400" height="400"></div>
+
+</section>
+<section>
+	<h2><a name="section3">Section 3</a></h2>
+	<p>This section will discuss about Family.
+	fgfgggd sasdsadsa wewqewqe sadsdasda sdasdasadsd asdasdsddsd asa ith a consonant sound (even if spelled with a vowel, as in a European).
+
+She had a house so large that an elephant would get lost without a map.
+Before some words beginning with a pronounced (not silent) h in an unstressed first syllable, such as hallucination, hilarious, historic(al), horrendous, and horrific, some (especially older) British writers prefer to use an over a (an historical event, etc.).[7] An is also preferred before hotel by some writers of British English (probably reflecting the relatively recent adoption of the word from French, in which the h is not pronounced).[8] The use of "an" before words beginning with an unstressed "h" is more common generally in British English than in American.[8] American writers normally use a in all these cases, although there are occasional uses of an historic(al) in American English.[9] According to the New Oxford Dictionary of English, such use is increasingly rare in British English too.[7] Unlike British English, American English typically uses an before herb, since the h in this word is silent for most Americans. The correct usage in respect of the term "hereditary peer" was the subject of an amendment debated in the UK Parliament.[10]
+
+Using a before a word beginning with a vowel sound in unstressed syllables - such as I left a orange on the working surface. - is not uncommon, but is universally considered non-standard.
+
+The word some is used as a functional plural of a/an.[citation needed] "An apple" never means more than one apple. "Give me some apples" indicates more than one is desired but without specifying a quantity. This finds comparison in Spanish, where the singular indefinite article "un/una" ("one") is completely indistinguishable from the unit number, except where it has a plural form ("unos/unas"): Dame una manzana" ("Give me an apple") > "Dame unas manzanas" ("Give me some apples"). However, some also serves as a quantifier rather than as a plural article, as in "There are some apples there, but not many."
+
+Some also serves as a singular indefinite article, as in "There is some person on the porch".</p>
+</section>
+<a href="https://wwww.facebook.com" title="like ou page"><div>Like our page!></div></a>
+<aside></aside>
+<a href="#top">Back to top</a>
+<footer></footer>
 </body>
 </html>					
